--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "inquirer": "^6.3.1",
+    "jest": "^28.1.2",
     "media-typer": "^0.3.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
